--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,30 @@
 doctype html
 html
-  head
-    title= title
+    head
+        title User Auth Project
+    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+    body
+        nav.navbar.navbar-default( role="navigation" )
+        .navbar-header
+            button.navbar-toggle.collapsed( type="button", data-toggle="collapse", data-target="#navbar-inverse", aria-expanded="false", aria-controls="navbar")
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+            a.navbar-brand(href="#") Node Auth Project
+
+        #navbar-inverse.collapse.navbar-collapse
+            ul.nav.navbar-nav
+                li
+                    a( href="#" ) Members
+                li
+                    a( href="#" ) Register
+                li
+                    a( href="#" ) Sign In
+            ul.nav.navbar-nav.navbar-right
+                li
+                    a( href="#" ) Logout
+
+
+        block content
