--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,30 +1,34 @@
 doctype html
 html
     head
-        title User Auth Project
-    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+        title Node Auth Project
+    link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
     body
-        nav.navbar.navbar-default( role="navigation" )
-        .navbar-header
-            button.navbar-toggle.collapsed( type="button", data-toggle="collapse", data-target="#navbar-inverse", aria-expanded="false", aria-controls="navbar")
-                span.sr-only Toggle navigation
-                span.icon-bar
-                span.icon-bar
-                span.icon-bar
-            a.navbar-brand(href="#") Node Auth Project
+        nav.navbar.navbar-default.navbar-fixed-top
+            .container
+                .navbar-header
+                    button.navbar-toggle.collapsed( type="button", data-toggle="collapse", data-target="#navbar", aria-expanded="false", aria-controls="navbar")
+                        span.sr-only Toggle navigation
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    a.navbar-brand(href="#") Node Auth Project
 
-        #navbar-inverse.collapse.navbar-collapse
-            ul.nav.navbar-nav
-                li
-                    a( href="#" ) Members
-                li
-                    a( href="#" ) Register
-                li
-                    a( href="#" ) Sign In
-            ul.nav.navbar-nav.navbar-right
-                li
-                    a( href="#" ) Logout
+                #navbar.collapse.navbar-collapse
+                    ul.nav.navbar-nav
+                        li(class=(title == 'Members' ? 'active' : ''))
+                            a( href="/" ) Members
+                        li(class=(title == 'Register' ? 'active' : ''))
+                            a( href="/users/register" ) Register
+                        li(class=(title == 'Sign In' ? 'active' : ''))
+                            a( href="/users/signin" ) Sign In
+                    ul.nav.navbar-nav.navbar-right
+                        li
+                            a( href="/users/logout" ) Logout
 
+        .container
+            block content
 
-        block content
+    script(src=src="https://code.jquery.com/jquery-1.12.2.min.js" integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk="   crossorigin="anonymous")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
