--- a/views/register.jade
+++ b/views/register.jade
@@ -7,6 +7,8 @@ block content
         if errors
             each error, i in errors
                 li.alert.alert-danger #{error.msg}
+        //- if errors
+        //-     li.alert.alert-danger #{errors[0].msg}
     form(method='post', action='/users/register', enctype='multipart/form-data')
         .form-group
             label Name
