--- a/views/register.jade
+++ b/views/register.jade
@@ -9,7 +9,7 @@ block content
                 li.alert.alert-danger #{error.msg}
         //- if errors
         //-     li.alert.alert-danger #{errors[0].msg}
-    form(method='post', action='/users/register', enctype='multipart/form-data')
+    form(method='post', action='/users/register', enctype='multipart/form-data', content-type='application/json')
         .form-group
             label Name
             input.form-control(name='name', type='text', placeholder='Bill')
